Sat May 11 14:18:56 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk/libdwarf/libdwarf_lineno.c: Fix wrong merge.

Sat May 11 14:01:29 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk: Merged from upstream-trunk.

Sat May 11 13:59:53 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* upstream-trunk: Sync'd with
	http://elftoolchain.svn.sourceforge.net/svnroot/elftoolchain/trunk@r2945

Thu May  9 00:19:47 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk/libdwarf/libdwarf_rw.c (_dwarf_write_sleb128): Fix
	encoding problem.
	Sent patch upstream as:
	http://sourceforge.net/apps/trac/elftoolchain/attachment/ticket/426

Mon May  6 23:09:38 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk: Merged from upstream-trunk.

Mon May  6 23:06:33 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* upstream-trunk: Sync'd with
	http://elftoolchain.svn.sourceforge.net/svnroot/elftoolchain/trunk@r2942

Sat May  4 19:43:09 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk/libdwarf/libdwarf_lineno.c (_dwarf_get_minlen): Add
	missing support for DW_ISA_ARM.
	* current-trunk/libdwarf/libdwarf_reloc.c (_dwarf_get_reloc_type,
	_dwarf_get_reloc_size): Likewise.
	Sent patch upstream as:
	http://sourceforge.net/apps/trac/elftoolchain/ticket/425

Sat May  4 19:33:48 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk/libdwarf/libdwarf_lineno.c (_dwarf_lineno_gen_program):
	Fix case of wrong line number generation + fix for a small encoding
	inefficiency.
	Sent patch upstream as:
	http://sourceforge.net/apps/trac/elftoolchain/ticket/424

Thu May  2 23:49:54 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk/libdwarf/dwarf_pro_lineno.c (dwarf_add_file_decl):
	Fix off-by-one return value.
	(dwarf_add_directory_decl): Likewise.
	Sent patch upstream as:
	http://sourceforge.net/apps/trac/elftoolchain/ticket/423

Thu May  2 23:19:08 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>
